fix: fix bug in members