@@ -28,10 +28,10 @@ public class MemberService {
         try {
             repository.findByEmail(request.email)
                     .ifPresent(m -> {
-                        throw new RuntimeException("Email already used");
+                        throw new RuntimeException("Email already used: " + request.email);
                     });
 
-            if (request.collectivityId == null || request.collectivityId.trim().isEmpty()) {
+            if (request.collectivityId == null || request.collectivityId.isBlank()) {
                 throw new RuntimeException("Collectivity ID is required");
             }
 
@@ -39,16 +39,29 @@ public class MemberService {
                 throw new RuntimeException("At least 2 sponsors required");
             }
 
-            long sameCollectivity = request.sponsors.stream()
-                    .filter(s -> request.collectivityId.equals(s.collectivityId))
+            List<Member> sponsorMembers = request.sponsors.stream()
+                    .map(s -> {
+                        try {
+                            return repository.findByIdWithCollectivity(s.id, request.collectivityId)
+                                    .orElseThrow(() -> new RuntimeException(
+                                            "Sponsor not found or not active in collectivity: " + s.id));
+                        } catch (SQLException e) {
+                            throw new RuntimeException("Database error while resolving sponsor: " + s.id, e);
+                        }
+                    })
+                    .toList();
+
+            long sameCollectivity = sponsorMembers.stream()
+                    .filter(s -> request.collectivityId.equals(s.getCollectivityId()))
                     .count();
 
-            long others = request.sponsors.size() - sameCollectivity;
+            long others = sponsorMembers.size() - sameCollectivity;
 
-            if (sameCollectivity < others) {
-                throw new RuntimeException("Invalid sponsor distribution");
+            if (sameCollectivity <= others) {
+                throw new RuntimeException(
+                        "Invalid sponsor distribution: majority must be from collectivity " + request.collectivityId
+                                + " (found " + sameCollectivity + "/" + sponsorMembers.size() + " from same collectivity)");
             }
-
             Member m = new Member();
             m.setFirstName(request.firstName);
             m.setLastName(request.lastName);
@@ -56,12 +69,33 @@ public class MemberService {
             m.setGender(request.gender);
             m.setAddress(request.address);
             m.setProfession(request.profession);
-            m.setPhone(request.phone);
+            m.setPhone(request.phoneNumber);
             m.setEmail(request.email);
             m.setMembershipDate(LocalDate.now());
             m.setCollectivityId(request.collectivityId);
 
-            return repository.save(m);
+            repository.save(m);
+
+            repository.saveAdhesion(m.getId(), request.collectivityId);
+
+            String adhesionId = "ADH-" + m.getId() + "-" + request.collectivityId;
+            for (CreateMemberRequest.SponsorInput sponsor : request.sponsors) {
+                repository.saveAdhesionReferent(adhesionId, sponsor.id);
+            }
+
+            if (request.payments != null) {
+                for (CreateMemberRequest.PaymentInput payment : request.payments) {
+                    repository.savePayment(
+                            m.getId(),
+                            payment.membershipFeeId,
+                            payment.accountCreditedId,
+                            payment.amount,
+                            payment.paymentMethod
+                    );
+                }
+            }
+
+            return m;
 
         } catch (SQLException e) {
             throw new RuntimeException("Database error", e);
